# xenosys

./: .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md  SNAPSHOT.md  SPECIFICATIONS.md  build_core.py  build_gateway.js  check_docker.py  docker-compose.plus.yml  docker-compose.profiles.yml  docker-compose.standard.yml  docker-compose.yml  docker-compose.yml.save  prebundle.sh  pytest.ini  requirements.txt  xenosys_cli.py
.agents_tmp/: PLAN.md
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  config.ts  main.tsx  store.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: BootSplash.tsx  InitialSettingsPanel.tsx  ModuleInstaller.tsx  NetworkSettings.tsx
desktop/src/components/atomic/: ConnectionStatus.tsx  CyberBadge.tsx  MCPWidgetRenderer.tsx  ThoughtBlock.tsx  index.ts
desktop/src/components/layout/: MainLayout.tsx  Sidebar.tsx
desktop/src/components/zones/: ArenaZone.tsx  GovernanceZone.tsx  SettingsZone.tsx
desktop/src/components/zones/modal/: OllamaDownloadModal.tsx
desktop/src/store/: uiStore.ts
docs/: Q0_SETUP.md  Q1_CONTAINER_MANAGER.md  Q2_CONTAINMENT.md  Q3_INFERENCE.md  Q4_MEMORY.md  Q5_CORTEX.md  Q6_README.md  Q7_SECURITY.md  Q8_CHAIN_OF_THOUGHT.md  Q9_CLI_INSTALLER.md  SECURITY.md  TECHNICAL_SPECIFICATION.md
docs/architecture/: ARCHITECTURE.md  SAD.md
docs/compliance/: RELEASE.md
docs/runbook/: RESILIENCE.md
docs/security/: THREAT_MODEL.md
docs/user-manual/: MANUAL.md
mobile/: App.tsx  README.md  package.json
mobile/src/hooks/: useTunnelHealth.ts
mobile/src/navigation/: AppNavigator.tsx
mobile/src/screens/: BriefingScreen.tsx  ChatScreen.tsx  PairingScreen.tsx  RadarScreen.tsx  StatusScreen.tsx
nexus/: README.md
nexus/core/: Dockerfile  app.py  pyproject.toml
nexus/core/agents/: __init__.py  base_agent.py  registry.py  signatures.py
nexus/core/entities/: entity.py
nexus/core/learning/: engine.py  star.py
nexus/core/learning/lora/: registry.py
nexus/core/llmops/: cost_tracker.py  governance.py  telemetry.py
nexus/core/memory/: hierarchical.py  orchestrator.py
nexus/core/memory/l1_semantic/: cortex_integration.py
nexus/core/memory/l2_longterm/: secondbrain_integration.py
nexus/core/memory/l3_episodic/: openviking_integration.py
nexus/core/memory/l4_contextual/: graph_integration.py
nexus/core/memory/working/: brainsys_integration.py
nexus/core/messaging/: __init__.py  broker.py
nexus/core/orchestration/: agent.py  event_bus.py
nexus/core/resilience/: __init__.py  circuit_breaker.py
nexus/gateway/: Dockerfile  package.json  tsconfig.json
nexus/gateway/src/auth/: middleware.ts  security.ts
nexus/gateway/src/channels/: api.ts  base.ts  discord.ts  manager.ts  slack.ts  telegram.ts  webhook.ts
nexus/gateway/src/gateway/: event-bus.ts  server.ts  types.ts
nexus/gateway/src/grpc/: bridge.ts
nexus/gateway/src/plugins/: manager.ts
nexus/gateway/src/proto/: nexus.proto
skill-arch-copilot/: SKILL.md
skill-arch-copilot/references/: anti-patterns.md  ia-patterns.md  modeling-guide.md  patterns.md
src/core/: __init__.py  hooks.py  logging.py  models.py
src/cortex/: __init__.py  cortex.py
src/inference/: __init__.py  contradiction_engine.py  rlm_inference.py
src/memory/: __init__.py  session_manager.py  variable_registry.py
src/runtime/: __init__.py  container_manager.py  docker_repl_engine.py  security_policing.py
src/ui/: __init__.py  server.py  test_ui.py  toggle_manager.py
src/ui/static/css/: styles.css
src/ui/static/js/: app.js
src/ui/views/: __init__.py  execution_view.py  graph_view.py
tests/integration/: test_docker_integration_real.py  test_docker_integration_security.py  test_security_policing.py
tests/unit/: test_core.py  test_cortex.py  test_docker_repl_engine.py  test_memory.py  test_q3_fixes.py  test_rlm_inference.py
