[project]
name = "xenosys-core"
version = "1.0.0"
description = "XenoSys Core - Python agent runtime with memory system and learning engine"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "XenoSys Team", email = "team@xenosys.dev"}
]
keywords = ["ai", "agent", "multi-agent", "llm", "metacognitive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dspy-ai>=2.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.3",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "peft>=0.13",
    "transformers>=4.44",
    "httpx>=0.28",
    "tenacity>=9.0",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pino>=1.0",
    "structlog>=25.0",
    "networkx>=3.3",
    "tree-sitter>=0.23",
    "litellm>=1.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-httpx>=0.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "tox>=4.0",
]
postgres = [
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
]
chromadb = [
    "chromadb>=0.5.0",
]
lora = [
    "peft>=0.13",
    "transformers>=4.44",
    "llama-cpp-python>=0.3",
]
training = [
    "unsloth @ git+https://github.com/unslothai/unsloth.git",
    "kaggle>=1.6",
]

[project.scripts]
xenosys-agent = "nexus.core.cli:main"
xenosys-orchestrator = "nexus.core.orchestration.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus/core"]

[tool.hatch.build.targets.sdist]
include = [
    "/nexus",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
source = ["nexus"]
omit = ["tests/*", "**/__pycache__"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]